tests/sksl/errors/ReservedNameNamespace.glsl
### Compilation failed:

error: 1: 'namespace' is a reserved word
1 error
